--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <TITLE>Basic HTML Sample Page</TITLE>
 </HEAD>
 
-<BODY BGCOLOR="WHITE">
+<BODY BGCOLOR="BLUE">
 <CENTER>
 <H1>A Simple Sample Web Page</H1>
 
